--- a/package.json
+++ b/package.json
@@ -3,27 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
-  },
-
-  "main": "app.js",
-  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  "main": "app.js",
   "dependencies": {
-    "bcrypt": "^1.0.3",
+    "bcrypt": "^3.0.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.15.5",
+    "debug": "~3.1.0",
+    "deep-extend": "^0.6.0",
+    "express": "~4.16.3",
     "express-session": "^1.15.6",
     "express-sessions": "^1.0.6",
-    "firebase": "^4.9.1",
+    "extend": "^3.0.2",
+    "firebase": "^5.4.2",
     "hbs": "~4.0.1",
-    "mongoose": "^5.0.1",
-    "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5",
+    "lodash": "^4.17.11",
+    "mime": "^2.4.0",
+    "mongoose": "^5.4.11",
+    "morgan": "^1.9.1",
+    "protobufjs": "^6.8.8",
+    "qs": "^6.6.0",
+    "serve-favicon": "~2.5.0",
     "socket.io": "^2.0.4"
   }
 }
